--- a/index.html
+++ b/index.html
@@ -90,18 +90,16 @@
             <hr class="star-dark mb-5">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <form id="contactForm" name="sentMessage" novalidate="novalidate" action="https://send.pageclip.co/vtncvwAcviptRdB4iJ2gPkSvrfoEOtd7/testForm" method="post">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls mb-0 pb-2"><label>Name</label><input class="form-control" type="text" id="name" required="" placeholder="Name"><small class="form-text text-danger help-block"></small></div>
-                        </div>
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls mb-0 pb-2"><label>Email Address</label><input class="form-control" type="email" id="email" required="" placeholder="Email Address"><small class="form-text text-danger help-block"></small></div>
-                        </div>
-                        <div class="control-group"></div>
-                        <div class="control-group"></div>
-                        <div id="success"></div>
-                        <div class="form-group" style="width: 754px;margin: 0px;margin-top: 12px;"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
-                    </form>
+                  <form action="https://send.pageclip.co/vtncvwAcviptRdB4iJ2gPkSvrfoEOtd7/testForm" class="pageclip-form" method="post">
+                    <!-- Replace these inputs with your own. Make sure they have a "name" attribute! -->
+                    <input type="text" name="name" value="Roscoe Jones" />
+                    <input type="email" name="email" value="roscoe@example.com" />
+
+                    <!-- This button will have a loading spinner. Keep the inner span for best results. -->
+                    <button type="submit" class="pageclip-form__submit">
+                      <span>Send</span>
+                    </button>
+                  </form>
                 </div>
             </div>
         </div>
